@@ -43,6 +43,7 @@ Bug fixes
  * Layout issue when using FieldRowPanel with a heading (Andreas Bernacca)
  * ``file_size`` and ``file_hash`` not updated when Document file changed (Andreas Bernacca)
  * Fixed order of URLs in project template so that static / media URLs are not blocked (Nick Smith)
+ * Added verbose_name_plural for form submission model (Janneke Janssen)
 
 
 Upgrade considerations
